# lisp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  lisp_v001.c
.github/workflows/: build.yml
doc/: basics.md  getting-started.md  shell-scripting.md  shell.md
src/: CMakeLists.txt  argparser.h  builtin.cpp  builtin.h  eval.cpp  eval.h  expr.cpp  expr.h  gc.cpp  gc.h  lisp.cpp  lisp.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  shell.cpp  shell.h  stdlib.lisp  tokenizer.cpp  tokenizer.h  util.h
src/stdlib/: profile.lsp  shell.lsp  util.lsp
stdlib/: README.md  profile.lsp  shell-lib.lsp  shell.lsp  util.lsp
tests/: CMakeLists.txt  test_lisp.cpp  test_shell.cpp  util.h
tests/examples/: example_01.lisp  example_03.lisp  prog_002.lisp
tests/programs/: example_02.lisp  example_02.lsp  example_03.lisp  factorial.lsp  fibonacci.lsp  for-each.lisp  for-each.lsp  make-adder.lsp  merge-sort.lisp  more-shell.lsp  pipe.lsp  shell-exec.lsp  test-shell-1.lsp  test-shell-2.lsp
tools/: create-release.lsp  install-lisp.sh  install.sh  publish.sh
